# audio-replacer

./: .editorconfig  .gitignore  App.xaml  App.xaml.cs  Audio-Replacer-2.csproj  Audio-Replacer-2.sln  Audio-Replacer.csproj  Audio-Replacer.sln  CONTRIBUTING.md  GenerateRelease.bat  GlobalUsings.cs  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  SECURITY.md  Styles.xaml  app.manifest  downloadAdditionalFiles.js  downloadReleaseData.js  fetchFiles.js  fetchReleaseNotes.js  nuget.config  org.lemon-studios.audio-replacer.yml  package-lock.json  package.json  preBuild.js  snapcraft.yaml  svelte.config.js  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CreateBuildArtifacts.yml  codeql.yml  publish-release.yml  publish-snap.yml
Converters/: VisibilityConverter.cs
Generic/: AppFunctions.cs  AppGeneric.cs  AppProperties.cs  PageBase.cs
MainWindow/: MainWindow.xaml  MainWindow.xaml.cs
MainWindow/PageData/: DataEditorData.cs  HomePageData.cs  RecordPageData.cs  SettingsData.cs
MainWindow/Pages/: DataEditor.xaml  DataEditor.xaml.cs  HomePage.xaml  HomePage.xaml.cs  OutputConverter.xaml  OutputConverter.xaml.cs  ProjectImporter.xaml  ProjectImporter.xaml.cs  RecordPage.xaml  RecordPage.xaml.cs  ReleaseLogsPage.xaml  ReleaseLogsPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
MainWindow/Util/: AudioRecordingUtils.cs  ProjectFileUtils.cs
Pages/: DataEditor.xaml  DataEditor.xaml.cs  PitchDataEditor.xaml  PitchDataEditor.xaml.cs  RecordPage.xaml  RecordPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
Properties/: launchSettings.json
Properties/PublishProfiles/: FolderProfile.pubxml  win-arm64.pubxml  win-x64.pubxml  win-x86.pubxml
Resources/: ButtonResources.xaml  Styles.xaml
Setup/: FirstTimeSetupWindow.xaml  FirstTimeSetupWindow.xaml.cs  SetupData.cs
Setup/Pages/: SetupAdvanced.xaml  SetupAdvanced.xaml.cs  SetupDownloading.xaml  SetupDownloading.xaml.cs  SetupSettings.xaml  SetupSettings.xaml.cs  SetupWelcome.xaml  SetupWelcome.xaml.cs
Util/: AppLogger.cs  AppSecrets.cs  AppSettings.cs  AppUpdater.cs  AudioRecordingUtils.cs  DragRegions.cs  FileInteractionUtils.cs  FileManagement.cs  Generic.cs  GlobalData.cs  IAppSettings.cs  Log.cs  MainWindowFunctionality.cs  PitchData.cs  PitchData.json  ProjectFileManagementUtils.cs  ProjectFileUtils.cs  RecordPageFunctionality.cs  RichPresenceController.cs  ShellCommandManager.cs  SystemUtils.cs  WebRequest.cs
Util/Logger/: LogAttribute.cs
ViewModels/: DataEditorViewModel.cs  MainWindowViewModel.cs  RecordPageViewModel.cs  SettingsViewModel.cs
Views/: DataEditor.xaml  DataEditor.xaml.cs  RecordPage.xaml  RecordPage.xaml.cs  ReleaseLogsPage.xaml  ReleaseLogsPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
Windows/FirstTimeSetup/: FirstTimeSetupWindow.xaml  FirstTimeSetupWindow.xaml.cs  SetupData.cs
Windows/FirstTimeSetup/Pages/: SetupAdvanced.xaml  SetupAdvanced.xaml.cs  SetupDownloading.xaml  SetupDownloading.xaml.cs  SetupSettings.xaml  SetupSettings.xaml.cs  SetupWelcome.xaml  SetupWelcome.xaml.cs
Windows/MainWindow/: MainWindow.xaml  MainWindow.xaml.cs
Windows/MainWindow/PageData/: DataEditorData.cs  RecordPageData.cs  RecordPageViewModel.cs  SettingsData.cs  SettingsViewModel.cs
Windows/MainWindow/Pages/: DataEditor.xaml  DataEditor.xaml.cs  OutputConverter.xaml  OutputConverter.xaml.cs  ProjectImporter.xaml  RecordPage.xaml  (+6 more)
Windows/Setup/: FirstTimeSetupWindow.xaml  FirstTimeSetupWindow.xaml.cs  SetupData.cs
postinstall/: downloadAdditionalFiles.js
src/: app.css  app.html
src-tauri/: .gitignore  2  Cargo.toml  build.rs  tauri.conf.json  undefined
src-tauri/binaries/: Credits.txt  ffmpeg-core.js
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: home-read-extends.toml
src-tauri/platform-binaries/: ffmpeg-x86_64-unknown-linux-gnu  info.txt
src-tauri/resources/: data.json  dummy-project.arproj  effectData.json  pitchData.json  releaseData.md  settings.json  stats.json
src-tauri/src/: lib.rs  main.rs  project_file_utils.rs
src-tauri/src/commands/: app_functions.rs  discord_rpc.rs  mod.rs  os_utils.rs  project_file_utils.rs  project_manager.rs  updater.rs  whisper_utils.rs
src-tauri/windows/: hooks.nsh
src/Components/: AudioPlayer.svelte  Button.svelte  CodeEditor.svelte  Dropdown.svelte  IntermediateProgressBar.svelte  Modal.svelte  NavBar.svelte  NavigationRail.svelte  NoProjectLoaded.svelte  Notification.svelte  ProgressBar.svelte  RecentProjectItem.svelte  Slider.svelte  Toast.svelte  ToggleSwitch.svelte
src/app/: AudioRecordUtils.ts  AudioRecorder.ts  CodeEditorTheme.ts  DiscordRpc.ts  FFMpegManager.ts  ProjectManager.ts  globals.css  page.jsx
src/generic/: AppProperties.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/tools/: DataInterface.ts  DiscordPresenceManager.ts  DiscordRpc.ts  EffectManager.ts  FFMpegManager.ts  NetworkUtils.ts  OsTools.ts  ProjectHandler.ts  ProjectManager.ts  SettingsManager.ts  StatisticManager.ts  UpdateManager.ts  Updater.ts  WhisperUtils.ts
src/util/: AppProperties.ts  AudioRecordUtils.ts  DiscordRpc.ts  EffectManager.ts  FFMpegManager.ts  NetworkUtils.ts  OsData.ts  OsTools.ts  ProjectFileUtils.ts  ProjectManager.ts  SettingsManager.ts  WhisperUtils.ts
(+29 files in other folders)
